# linger-core

./: .gitignore  Cargo.toml  README.md
docs/: grammar.md  todo.md
examples/: fibonacci.ling  filter.ling  fizzbuzz.ling  fold_left.ling  hello_world.ling  identity.ling  map.ling  summing_integers.ling
src/: desugar.rs  desugarer.rs  environment.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs  test.rs  tokenizer.rs
src/interpreter/: expressions.rs  statements.rs  utils.rs
src/parser/: expressions.rs  procedures.rs  statements.rs  utils.rs
src/test/: parser.rs  tokenizer.rs
src/tokenizer/: error.rs  token.rs  tokenize.rs
test_programs/assignment/: const.ling  err-const_reassignment.ling  err-invalid_assignment_target.ling  err-keyword_as_var.ling  err-reassign_top_level_proc.ling  initialization.ling  reassignment.ling
test_programs/builtins/: err-is_empty_non_list.ling  is_empty_true.ling
test_programs/control_flow/: early_return.ling  if_else.ling  if_no_else.ling  multi_branch.ling  multi_branch_else.ling  return_from_block.ling
test_programs/lists/: err-head_non_list.ling  err-index_not_an_integer_float.ling  err-index_not_an_integer_string.ling  err-index_out_of_bounds_higher.ling  err-index_out_of_bounds_lower.ling  err-rest_non_list.ling  (+6 more)
tests/: assignment.rs  binary_operators.rs  builtins.rs  control_flow.rs  error_checks.rs  integration_tests.rs  lists.rs  loops.rs  miscellaneous.rs  operators.rs  order_of_operations.rs  procedures.rs  scope.rs  tests.rs  trivial_programs.rs
tests_v1/: integration_tests.rs  operators.rs  scope.rs
(+103 files in other folders)
