[package]
name = "linger-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "linger"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"